--- a/MoreClassesStuff/MoreClassesStuff.vcxproj
+++ b/MoreClassesStuff/MoreClassesStuff.vcxproj
@@ -138,10 +138,12 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="mathstuff.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="mathstuff.cpp" />
     <ClCompile Include="MoreClassesStuff.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
