--- a/MoreClassesStuff/MoreClassesStuff.vcxproj.filters
+++ b/MoreClassesStuff/MoreClassesStuff.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="mathstuff.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MoreClassesStuff.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="mathstuff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
