--- a/MoreClassesStuff/MoreClassesStuff.vcxproj
+++ b/MoreClassesStuff/MoreClassesStuff.vcxproj
@@ -139,12 +139,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mathstuff.h" />
+    <ClInclude Include="Person.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mathstuff.cpp" />
     <ClCompile Include="MoreClassesStuff.cpp" />
+    <ClCompile Include="Person.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
