Working with scope

--- a/MoreClassesStuff/MoreClassesStuff.vcxproj.filters
+++ b/MoreClassesStuff/MoreClassesStuff.vcxproj.filters
@@ -35,13 +35,13 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MoreClassesStuff.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="mathstuff.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Person.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Scope.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
