--- a/MoreClassesStuff/MoreClassesStuff.vcxproj
+++ b/MoreClassesStuff/MoreClassesStuff.vcxproj
@@ -145,8 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mathstuff.cpp" />
-    <ClCompile Include="MoreClassesStuff.cpp" />
     <ClCompile Include="Person.cpp" />
+    <ClCompile Include="Scope.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
